crates/cadenza-compiler/test-data/semantics/literals-error-division-by-zero.expected
error: division by zero
 --> test.cdz:1:1
  |
1 | 1 / 0
  | ^^^^^ cannot divide by zero
  |
  = note: division by zero is undefined